refactor: rename event and request/response types for consistency
- Replaced `EventType` with `PlatformEventType` across tests and server code to align with updated protobuf definitions.
- Renamed `UploadPipeDocRequest`/`Response` to `UploadFilesystemPipeDocRequest`/`Response`.
- Updated gRPC service method and stub names accordingly.
- Consolidated module registrations in `build.gradle` to a single `all` module.
- Adjusted test directory paths and WireMock configuration for streamlined resource handling.
- Removed unused descriptor files under `resources`.